# advent-of-code

./: .gitignore
2020/haskell/: .gitignore  advent-of-code.cabal  default.nix  hie.yaml  make-default.nix  package.yaml
2020/haskell/day01/: Main.hs
2020/haskell/day02/: Main.hs
2020/haskell/day03/: Main.hs
2020/haskell/day04/: Main.hs
2020/haskell/day05/: Main.hs
2020/haskell/day06/: Main.hs
2020/haskell/day07/: Main.hs
2020/haskell/day08/: Main.hs
2020/haskell/day09/: Main.hs
2020/haskell/day10/: Main.hs
2020/haskell/day11/: Main.hs
2020/haskell/day12/: Main.hs
2020/haskell/day13/: Main.hs
2020/haskell/day14/: Main.hs
2020/haskell/day15/: Main.hs
2020/haskell/day16/: Main.hs
2020/haskell/day17/: Main.hs
2020/haskell/day17/input/: real.txt
2020/haskell/lib/: Tuples.hs
2020/haskell/lib/AdventOfCode/: Between.hs  Both.hs  Tuples.hs
2020/haskell/nix/: sources.json
2022/: aoc2022.cabal
2022/day01/: Main.hs
2022/day02/: Main.hs
2022/day03/: Main.hs
2022/day04/: Main.hs
2022/day05/: Main.hs
2022/day06/: Main.hs
2022/day07/: Main.hs
2022/day08/: Main.hs
2022/day09/: Main.hs
2022/day10/: Main.hs
2022/day11/: Main.hs
2022/day12/: Main.hs
2022/day13/: Main.hs
2022/day14/: Main.hs
2022/day15/: Main.hs
2022/day16/: Main.hs
2022/day17/: Main.hs
2022/day18/: Main.hs
2022/day19/: Main.hs
2022/day20/: Main.hs
2022/day21/: Main.hs
2022/day22/: Main.hs
2022/day23/: Main.hs
2022/day24/: Main.hs
2022/day25/: Main.hs
2022/lib/: AdventOfCode.hs  FreerExtras.hs  FunctionExtras.hs  ListExtras.hs  MegaparsecExtras.hs  SquareGrid.hs
