cabal-version: 2.4
name: aoc2022
version: 0.1.0.0
author: Valentin Robert

common common-all
  build-depends:
    base ^>=4.16.1.0,
    extra,
    lens,
    megaparsec,
    string-interpolate,
  default-extensions:
    ConstraintKinds
    DataKinds
    FlexibleContexts
    GADTs
    KindSignatures
    LambdaCase
    NumericUnderscores
    RankNTypes
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
  default-language: Haskell2010

library
  import: common-all
  exposed-modules:
    AdventOfCode
    ListExtras
    MegaparsecExtras
  hs-source-dirs: lib

common common-executables
  import: common-all
  build-depends:
    aoc2022,

executable day01
  import: common-executables
  hs-source-dirs: day01
  main-is: Main.hs
  build-depends:
    aoc2022,

executable day02
  import: common-executables
  hs-source-dirs: day02
  main-is: Main.hs
  build-depends:
    aoc2022,

executable day03
  import: common-executables
  hs-source-dirs: day03
  main-is: Main.hs
  build-depends:
    aoc2022,

executable day04
  import: common-executables
  hs-source-dirs: day04
  main-is: Main.hs
  build-depends:
    aoc2022,

executable day05
  import: common-executables
  hs-source-dirs: day05
  main-is: Main.hs
  build-depends:
    aoc2022,

executable day06
  import: common-executables
  hs-source-dirs: day06
  main-is: Main.hs
  build-depends:
    aoc2022,

executable day07
  import: common-executables
  hs-source-dirs: day07
  main-is: Main.hs
  build-depends:
    aoc2022,

executable day08
  import: common-executables
  hs-source-dirs: day08
  main-is: Main.hs
  build-depends:
    aoc2022,

executable day09
  import: common-executables
  hs-source-dirs: day09
  main-is: Main.hs
  build-depends:
    aoc2022,

executable day10
  import: common-executables
  hs-source-dirs: day10
  main-is: Main.hs
  build-depends:
    aoc2022,

executable day11
  import: common-executables
  hs-source-dirs: day11
  main-is: Main.hs
  build-depends:
    aoc2022,

executable day12
  import: common-executables
  hs-source-dirs: day12
  main-is: Main.hs
  build-depends:
    aoc2022,

executable day13
  import: common-executables
  hs-source-dirs: day13
  main-is: Main.hs
  build-depends:
    aoc2022,

executable day14
  import: common-executables
  hs-source-dirs: day14
  main-is: Main.hs
  build-depends:
    aoc2022,

executable day15
  import: common-executables
  hs-source-dirs: day15
  main-is: Main.hs
  build-depends:
    aoc2022,

executable day16
  import: common-executables
  hs-source-dirs: day16
  main-is: Main.hs
  build-depends:
    aoc2022,

executable day17
  import: common-executables
  hs-source-dirs: day17
  main-is: Main.hs
  build-depends:
    aoc2022,

executable day18
  import: common-executables
  hs-source-dirs: day18
  main-is: Main.hs
  build-depends:
    aoc2022,

executable day19
  import: common-executables
  hs-source-dirs: day19
  main-is: Main.hs
  build-depends:
    aoc2022,

executable day20
  import: common-executables
  hs-source-dirs: day20
  main-is: Main.hs
  build-depends:
    aoc2022,

executable day21
  import: common-executables
  hs-source-dirs: day21
  main-is: Main.hs
  build-depends:
    aoc2022,

executable day22
  import: common-executables
  hs-source-dirs: day22
  main-is: Main.hs
  build-depends:
    aoc2022,

executable day23
  import: common-executables
  hs-source-dirs: day23
  main-is: Main.hs
  build-depends:
    aoc2022,

executable day24
  import: common-executables
  hs-source-dirs: day24
  main-is: Main.hs
  build-depends:
    aoc2022,

executable day25
  import: common-executables
  hs-source-dirs: day25
  main-is: Main.hs
  build-depends:
    aoc2022,
